@@ -16,26 +16,58 @@ public class FileStorageService {
     @Value("${app.base-url:http://localhost:8080}")
     private String baseUrl;
 
+    // public String storeBookImage(Long isbn, MultipartFile file) throws
+    // IOException {
+    // Path uploadPath = Paths.get(uploadDir);
+    // if (!Files.exists(uploadPath)) {
+    // Files.createDirectories(uploadPath);
+    // }
+    // String originalFilename =
+    // Path.of(file.getOriginalFilename()).getFileName().toString(); // sanitizar
+    // String fileName = isbn + "_" + System.currentTimeMillis() + "_" +
+    // originalFilename;
+    // Path filePath = uploadPath.resolve(fileName);
+    // Files.copy(file.getInputStream(), filePath,
+    // StandardCopyOption.REPLACE_EXISTING);
+    // return baseUrl + "/uploads/images/books/" + fileName;
+    // }
+
     public String storeBookImage(Long isbn, MultipartFile file) throws IOException {
         Path uploadPath = Paths.get(uploadDir);
         if (!Files.exists(uploadPath)) {
             Files.createDirectories(uploadPath);
         }
-        String originalFilename = Path.of(file.getOriginalFilename()).getFileName().toString(); // sanitizar
+        String originalFilename = Path.of(file.getOriginalFilename()).getFileName().toString(); // Sanitizar
         String fileName = isbn + "_" + System.currentTimeMillis() + "_" + originalFilename;
         Path filePath = uploadPath.resolve(fileName);
         Files.copy(file.getInputStream(), filePath, StandardCopyOption.REPLACE_EXISTING);
-        return baseUrl + "/uploads/images/books/" + fileName;
+        return fileName; // 👉 Guardamos solo el nombre del archivo
     }
 
-    public void deleteImageIfExists(String imageUrl) throws IOException {
-        if (imageUrl == null || imageUrl.isBlank())
+    // public void deleteImageIfExists(String imageUrl) throws IOException {
+    // if (imageUrl == null || imageUrl.isBlank())
+    // return;
+    // // Elimina el prefijo "/uploads/images/books/" del path
+    // String fileName = Path.of(imageUrl).getFileName().toString();
+    // Path imagePath = Paths.get(uploadDir).resolve(fileName);
+    // if (Files.exists(imagePath)) {
+    // Files.delete(imagePath);
+    // }
+    // }
+
+    public void deleteImageIfExists(String fileName) throws IOException {
+        if (fileName == null || fileName.isBlank())
             return;
-        // Elimina el prefijo "/uploads/images/books/" del path
-        String fileName = Path.of(imageUrl).getFileName().toString();
-        Path imagePath = Paths.get(uploadDir).resolve(fileName);
+
+        System.out.println("\n\nEstamos en el servicio de eliminación...\n\n");
+        Path imagePath = Paths.get(uploadDir).resolve(fileName).toAbsolutePath();
+        System.out.println("\n\nRuta de la imagen: " + imagePath + "\n\n");
+
         if (Files.exists(imagePath)) {
             Files.delete(imagePath);
+            System.out.println("Imagen eliminada exitosamente.");
+        } else {
+            System.out.println("La imagen no existe en el sistema.");
         }
     }
 }
